# Digital-Model-of-Consciousness

./: .gitignore  .gitmodules  README.md  control_panel.py  pyproject.toml  requirements.txt  runner.py
config/: __init__.py  runner.yaml
docs/: codex_module_audit_task.md
docs/architecture/: README.md  conscious_loop_patch_v2.md  current_structure.md  dream_probe_live_stimulus.md  energy_resonator_integration.md  m11_affect_visibility_monitor.md  m1_object_slot_imit_direct_z_fix.md  m1_object_slot_latent_imit.md  m5_latent_prototype_simulator.md  module_debug_lab.md  (+16 more)
scripts/: apply_conscious_loop_patch_v2.py  apply_conscious_loop_patch_v2_1_anchor_fix.py  apply_dream_probe_live_stimulus_patch_v1.py  apply_energy_resonator_imit_action_patch.py  apply_m11_affect_visibility_monitor_patch_v1.py  apply_m8_module_lab_button_patch_v1.py  apply_m8_module_lab_buttons_full_fix_v1.py  apply_m8_module_lab_window_fix_patch_v1.py  apply_module_debug_lab_patch_v1.py  apply_module_imit_layout_patch_v1.py  apply_sleep_entry_zero_prev_motor_patch_v1.py  apply_sleep_replay_monitor_patch_v1.py  apply_unconscious_live_debug_patch_v1.py  apply_unconscious_sleep_loop_life_runtime_anchor_fix.py  apply_unconscious_sleep_loop_patch_v1.py  run_energy_resonator_demo.py
supervisor/: README.md  codex_debug.py  codex_interact.py  codex_interact_universal.py  config.py  replay_inner_object_sleep_modes.py  replay_tetra_dynamic.py  run_slot_to_3d4d_windows_demo.sh
tests/: test_conscious_contracts.py  test_m02_event_dream_replay.py  test_m04_long_dynamic_memory.py  test_runner_thread_affinity.py
(+386 files in other folders)
